Fixed layered asset loading: single > group > default - adjustments to asset loading routine - relocated assets